--- a/gtm-plugin.yaml
+++ b/gtm-plugin.yaml
@@ -1,2 +1,3 @@
 enabled: true
 text_var: Custom Text added by the **Gtm Plugin** plugin (disable plugin to remove)
+container_id : Add the Container ID here
